Final assign02 minor fixes